--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <style>
-.head{background:black; padding:15px; color:lime;margin:auto;}
+.head{background:black; padding:15px; color:lime;margin:-5px;}
 body{background:#f5f5f5;}
 .main ,.post{background:lime; padding:45px; margin-top:10px; border:2px solid black; border-radius:7px;}
 .main button{border:2px solid black; border-radius:5px; font-size:30px; font-weight:600; background:lime; color:black; margin:15px;}
