--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ h1{font-family:sans-serif;}
 .content h1{border-bottom:2px solid black; padding:5px;}
 </style>
   <meta charset="UTF-8">
-  < meta name=”viewport” content=”width=device-width, initial-scale=1.0” >
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="theme-color" content="black">
   <title>Security News</title>
 </head>
 <body>
